ci: install gpgme as its required by operator-sdk
Signed-off-by: Niraj Yadav <niryadav@redhat.com>
(cherry picked from commit ea72d5c397474a303641889b2fb370e58ed7fbbf)

--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -20,6 +20,9 @@ jobs:
         with:
           go-version-file: go.mod
 
+      - name: Install gpgme for operator-sdk
+        run: sudo apt-get update && sudo apt-get install -y libgpgme-dev
+
       - name: Generate the bundle contents
         run: make bundle
 
