--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -22,6 +22,9 @@ jobs:
         with:
           go-version-file: go.mod
 
+      - name: Install gpgme for operator-sdk
+        run: sudo apt-get update && sudo apt-get install -y libgpgme-dev
+
       - name: Generate the bundle contents
         run: make bundle TAG=${{ github.ref_name }}
 
